<resources>
    <string name="app_name">EC2</string>

    <string name="Boton_Registrar">REGISTRAR</string>
    <string name="boton_Formulario">FORMULARIO</string>
    <string name="Boton_Listado">LISTADO\n</string>
    <string name="tvCuestionario">CUESTIONARIO\n</string>
    <string name="TvHabilidades">1. MARQUE SUS HABILIDADES</string>
    <string name="CheckbAutoconocimiento">Autoconocimiento</string>
    <string name="CheckbEmpatia">Empatía</string>
    <string name="CheckbComunicacionA">Comunicación Asertiva</string>
    <string name="CheckbTomaDesiciones">Toma de Decisiones</string>
    <string name="CheckbPensamientoC">Pensamiento Crítico</string>
    <string name="CheckbNinguno">Ningúno</string>
    <string name="TvSignificativoTrabajo">2.¿Cuan Significativo es tu Trabajo?</string>
    <string name="RBMUCHO">Mucho</string>
    <string name="RB1MASOMENOS">Más o Menos</string>
    <string name="RBPOCO">Poco</string>
    <string name="PREGUNTA3">3.¿Que tan bien te pagan en el trabajo que haces?</string>
    <string name="RB2BIEN">Bien</string>
    <string name="RB2REGULAR">Regular</string>
    <string name="RB2MAL">Mal</string>
    <string name="tvTRABAJAS_BAJO_PRESION">4.¿Trabajas bajo Presión?</string>
    <string name="RB3SI">Si</string>
    <string name="Rb3NO">No</string>
    <string name="TvOportunidad_Crecimiento">5.¿Tienes Oportunidad de Crecimiento en tu \nTrabajo?</string>
    <string name="RB4SI">Si</string>
    <string name="RB4NO">No</string>
    <string name="BTNENVIAR">Enviar</string>
    =======
    <string name="tvinformacion">INFORMACIÓN</string>
    <string name="valetnombre">Nombre</string>
    <string name="valetapellidos">Apellidos</string>
    <string name="valetdni">DNI</string>
    <string name="valetcelular">Celular</string>
    <string name="valetemail">Email</string>
    <string name="tvcualidades">Selecciones sus cualidades:</string>
    <string name="valcbpuntual">Puntual</string>
    <string name="valcbrespetuoso">Respetuoso</string>
    <string name="valcbresponsable">Responsable</string>
    <string name="valcbotro">Otro</string>
    <string name="valetotracualidad">Ingrese otra cualidad</string>
    <string name="valetestadocivil">Estado Civil:</string>
    <string name="valrbsoltero">Soltero</string>
    <string name="valrbcasado">Casado</string>
    <string name="valrbdivorciado">Divorciado</string>
    <string name="valrbviudo">Viudo</string>
    <string name="valbtnacceder">Acceder</string>
    <string name="mensajeRegistroCorrecto">Registro Realizado Correctamente</string>
    <string name="valetlistado">LISTADO</string>
<<<<<<< HEAD
    <string name="valetlistarF">Listar</string>
=======
    <string name="INT">INTERNACIONALES</string>
    <string name="INT3">INTERNACIONALES</string>
>>>>>>> bb0384076637f7d395ccb2c86d5a965a8a97f5b8
</resources>